| Summary: | ASTERISK-27260: [pjsip] chan_pjsip_indicate: Don't know how to indicate condition 36 | ||
| Reporter: | Daniel Heckl (DanielYK) | Labels: | pjsip |
| Date Opened: | 2017-09-07 01:45:40 | Date Closed: | 2017-09-28 16:14:40 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 15.0.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | GIT-master-991750d | Attachments: | ( 0) debug.txt |
| Description: | I get following WARNING:
WARNING[27481][C-0000001a]: chan_pjsip.c:1743 chan_pjsip_indicate: Don't know how to indicate condition 36 Attached is a debug log level 1. What does this warning mean, is there something wrong? | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-09-07 01:45:41.770-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2017-09-07 18:38:05.608-0500 We appreciate the difficulties you are facing, however this does not appear to be a bug report and your request or comments would be better served in a different forum. The Asterisk community provides support over IRC, mailing lists, and forums as described at http://asterisk.org/community. The Asterisk issue tracker is used specifically to track issues concerning bugs and documentation errors. Please see the Asterisk Issue Guidelines [1] for instruction on the intended use of the Asterisk issue tracker. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: George Joseph (gjoseph) 2017-09-20 05:56:07.482-0500 I ran into the same issue and a fix is coming. By: Friendly Automation (friendly-automation) 2017-09-20 15:34:54.053-0500 Change 6532 merged by Joshua Colp: chan_pjsip: Ignore AST_CONTROL_STREAM_TOPOLOGY_CHANGED for now [https://gerrit.asterisk.org/6532|https://gerrit.asterisk.org/6532] By: Friendly Automation (friendly-automation) 2017-09-20 15:35:23.623-0500 Change 6546 merged by Joshua Colp: chan_pjsip: Ignore AST_CONTROL_STREAM_TOPOLOGY_CHANGED for now [https://gerrit.asterisk.org/6546|https://gerrit.asterisk.org/6546] By: Friendly Automation (friendly-automation) 2017-09-20 15:36:21.408-0500 Change 6533 merged by Jenkins2: chan_pjsip: Ignore AST_CONTROL_STREAM_TOPOLOGY_CHANGED for now [https://gerrit.asterisk.org/6533|https://gerrit.asterisk.org/6533] | ||